--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "infopasazer-wrapper",
-  "version": "1.1.1",
-  "description": "Wrapper for infopasazer.intercity.pl",
-  "author": "mic0 <npm@mic0.me> (mic0.me)",
-  "homepage": "https://github.com/mic0ishere/infopasazer-wrapper#readme",
+  "name": "infopasazer-wrapper-v2",
+  "version": "0.0.1-slay",
+  "description": "Wrapper for infopasazer.intercity.pl v2",
+  "homepage": "https://github.com/domeqdev-archived/infopasazer-wrapper#readme",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mic0ishere/infopasazer-wrapper/issues",
-    "email": "npm@mic0.me"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mic0ishere/infopasazer-wrapper.git"
+    "url": "https://github.com/domeqdev-archived/infopasazer-wrapper.git"
   },
   "type": "module",
   "module": "./index.js",
@@ -28,10 +23,9 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.10",
-    "node-fetch": "^3.2.3"
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "typescript": "^4.6.3"
+    "typescript": "^4.7.4"
   }
 }
